<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sch"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/tv"
        android:textColor="#00E5FF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/tv1"
        android:textColor="#FFEA00" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/tv2"
        android:textColor="#FFEA00" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/tv3"
        android:textColor="#FFEA00" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/tv4"
        android:textColor="#FFEA00"
        android:textColorHighlight="#FFEA00"
        android:textColorHint="#00E5FF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/tv5"
        android:textColor="#FFEA00" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/tv6"
        android:textColor="#FFEA00" />

</LinearLayout>